# chatterbox

./: .gitignore  example_tts.py  example_tts_tr.py  pyproject.toml  test.py  test1.py
scripts/: dataset_utils.py  debug_embeddings.py  debug_one.py  download_common_voice_official_v22.py  download_common_voice_tr.py  download_common_voice_tr_streaming.py  explore_common_voice_tr.py  extend_tokenizer_tr.py  lora_train_tr.py  lora_train_tr_s3gen.py  recreate_cache.py  run_adapter_compare.py
src/chatterbox/: audio_editing.py  tts.py  vc.py
src/chatterbox/models/s3gen/: flow.py
src/chatterbox/models/t3/: t3.py
